--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "OpenAPI-Generator",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bluestarcs/StreamingAvatarSDK.git"
+    "url": "https://github.com/bluestarcs/StreamingAvatarSDK.git"
   },
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
@@ -16,9 +16,8 @@
   "devDependencies": {
     "typescript": "^4.0"
   },
-  "bugs": {
-    "url": "https://github.com/HeyGen-Official/StreamingAvatarSDK/issues"
-  },
-  "homepage": "https://github.com/HeyGen-Official/StreamingAvatarSDK",
+  "publishConfig": {
+  "registry": "https://npm.pkg.github.com"
+},
   "license": "MIT"
 }
