--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,1 @@
-//registry.npmjs.org/:_authToken=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
+//npm.pkg.github.com/:_authToken=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
